# pdf-outliner

./: .env.example  .gitignore  README.md  REUSE.toml  main.py  pyproject.toml
src/pdf_outliner/: __init__.py  cli.py  core.py
